<resources>
    <string name="app_name">GameUniv</string>

    <string name="activity_edit_profile">프로필 편집</string>

    <!-- Strings related to login -->
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">패스워드</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">이메일 주소가 잘못되었습니다</string>
    <string name="error_invalid_password">패스워드가 너무 짧습니다</string>
    <string name="error_incorrect_password">패스워드가 잘못되었습니다</string>
    <string name="error_field_required">이 필드는 필수입니다</string>

    <string name="auth_message">게임 \'%s\'이 회원님의 계정으로 로그인을 하고자 합니다</string>
    <string name="auth_scheme">gameUniv</string>
    <string name="auth_account_type">io.github.shygiants.gameuniv</string>
    <string name="auth_full_access">Full Access</string>
    <string name="auth_full_access_label">계정에 대한 모든 권한</string>
    <string name="auth_game_login">Game Login</string>
    <string name="auth_game_login_label">게임 로그인을 위한 권한</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Navigation drawer 열기</string>
    <string name="navigation_drawer_close">Navigation drawer 닫기</string>

    <string name="navigation_newsfeed">뉴스피드</string>
    <string name="navigation_timeline">타임라인</string>
    <string name="navigation_games">게임</string>
    <string name="navigation_achievement">업적</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="moment_score">최고 점수</string>

    <string name="profile_tab_timeline">타임라인</string>

    <string name="follow_button">팔로우</string>
    <string name="edit_profile_button">프로필 편집</string>

    <!--&#8230; means ellipsis(...)-->
    <string name="write_content">글쓰기&#8230;</string>
    <string name="contents_image_desc_hint">이미지 설명 추가&#8230;</string>
    <string name="contents_title_hint">컨텐츠 제목 추가&#8230;</string>
    <string name="contents_desc_hint">컨텐츠 설명 추가&#8230;</string>

    <string name="camera_roll">카메라 롤</string>

    <string name="snack_bar_server_err">서버 문제</string>
    <string name="snack_bar_connection_err">인터넷 연결 문제</string>
    <string name="snack_bar_action">다시 시도</string>

    <string name="action_confirm">확인</string>
    <string name="action_post">게시</string>
    <string name="action_set_title_photo">타이틀 이미지 설정</string>
    <string name="action_view_pages">페이지 모두 보기</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editing">Edit Profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_game_list">Games</string>
    <string name="title_game_detail">Game Detail</string>
    <string name="title_activity_post_contents">PostContentsActivity</string>
    <string name="title_activity_contents">컨텐츠 작성</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
