<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_newsfeed" android:icon="@drawable/ic_view_stream"
            android:title="@string/navigation_newsfeed" />
        <item android:id="@+id/nav_timeline" android:icon="@drawable/ic_account_box"
            android:title="@string/navigation_timeline" />
        <item android:id="@+id/nav_games" android:icon="@drawable/ic_videogame_asset"
            android:title="@string/navigation_games" />
        <item android:id="@+id/nav_achievement" android:icon="@drawable/ic_check_circle"
            android:title="@string/navigation_achievement" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>