<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PostContentsActivity">
    <item
        android:id="@+id/view_pages"
        android:title="@string/action_view_pages"
        android:icon="@drawable/ic_view_comfy"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/set_title_photo"
        android:title="@string/action_set_title_photo"
        android:icon="@drawable/ic_photo"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/post"
        android:title="@string/action_post"
        android:icon="@drawable/ic_done"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>